# Phonetisaurus

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README.txt  _lattice_pruner_8cc.html  _lattice_pruner_8cc_source.html  _lattice_pruner_8h.html  _legacy_rnn_l_m_decodable_8h_source.html  _legacy_rnn_l_m_hash_8h_source.html  _legacy_rnn_l_m_reader_8h.html  _legacy_rnn_l_m_reader_8h_source.html  _m2_m_fst_aligner_8cc_source.html  _m2_m_fst_aligner_8h.html  _m2_m_fst_aligner_8h_source.html  _phonetisaurus_rex_8h.html  _phonetisaurus_rex_8h_source.html  _rnn_l_m_decoder_8h.html  _rnn_l_m_py_8h_source.html  aclocal.m4  class_a_r_p_a2_w_f_s_t.html  class_identity_path_filter.html  class_legacy_rnn_l_m_hash-members.html  class_m2_m_path_filter-members.html  class_m2_m_path_filter.html  class_phonetisaurus_script.html  class_rnn_l_m_decoder-members.html  class_rnn_l_m_decoder.html  class_rnn_l_m_py-members.html  class_token_pointer_compare-members.html  class_token_pointer_compare.html  classfst_1_1_lattice_pruner-members.html  classfst_1_1_lattice_pruner.html  classfst_1_1_m2_m_fst_aligner.html  configure  (+34 more)
docs/: doxygen.cfg  mainpage.dox
html/: _a_r_p_a2_w_f_s_t_8h.html  _a_r_p_a2_w_f_s_t_8h_source.html  _lattice_pruner_8h_source.html  _legacy_rnn_l_m_decodable_8h.html  _legacy_rnn_l_m_hash_8h.html  _m2_m_fst_aligner_8cc.html  _phonetisaurus_script_8h.html  _phonetisaurus_script_8h_source.html  _rnn_l_m_decoder_8h_source.html  _rnn_l_m_py_8h.html  annotated.html  checked_8h.html  checked_8h_source.html  class_a_r_p_a2_w_f_s_t-members.html  class_c_rnn_l_m-members.html  class_c_rnn_l_m.html  class_chunk-members.html  class_chunk.html  class_identity_path_filter-members.html  class_legacy_rnn_l_m_decodable-members.html  class_legacy_rnn_l_m_decodable.html  class_legacy_rnn_l_m_hash.html  class_legacy_rnn_l_m_reader-members.html  class_legacy_rnn_l_m_reader.html  class_phonetisaurus_script-members.html  class_rnn_l_m_py.html  class_simple_result-members.html  class_simple_result.html  class_token-members.html  class_token.html  class_token_compare-members.html  class_token_compare.html  class_token_hash-members.html  class_token_hash.html  classes.html  classfst_1_1_m2_m_fst_aligner-members.html  classfst_1_1_m2_m_fst_aligner.html  classutf8_1_1exception.html  classutf8_1_1invalid__code__point-members.html  classutf8_1_1invalid__code__point.html  (+87 more)
html/search/: all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_7.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_a.js  classes_c.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_2.js  files_3.js  files_5.js  files_7.js  functions_1.js  functions_10.js  functions_13.js  functions_14.js  functions_2.js  functions_5.js  functions_c.js  (+15 more)
latex/: _a_r_p_a2_w_f_s_t_8h.tex  _lattice_pruner_8cc.tex  _lattice_pruner_8h.tex  _legacy_rnn_l_m_decodable_8h.tex  _legacy_rnn_l_m_hash_8h.tex  _legacy_rnn_l_m_reader_8h.tex  _m2_m_fst_aligner_8cc.tex  _m2_m_fst_aligner_8h.tex  _phonetisaurus_rex_8h.tex  _phonetisaurus_script_8h.tex  _rnn_l_m_decoder_8h.tex  _rnn_l_m_py_8h.tex  annotated.tex  checked_8h.tex  class_a_r_p_a2_w_f_s_t.tex  class_c_rnn_l_m.tex  class_chunk.tex  class_identity_path_filter.tex  class_legacy_rnn_l_m_decodable.tex  class_legacy_rnn_l_m_hash.tex  class_legacy_rnn_l_m_reader.tex  class_m2_m_path_filter.tex  class_phonetisaurus_script.tex  class_rnn_l_m_decoder.tex  class_rnn_l_m_py.tex  class_simple_result.tex  class_token.tex  class_token_compare.tex  class_token_hash.tex  class_token_pointer_compare.tex  classfst_1_1_lattice_pruner.tex  classfst_1_1_m2_m_fst_aligner.tex  classutf8_1_1exception.eps  classutf8_1_1exception.tex  classutf8_1_1invalid__code__point.eps  classutf8_1_1invalid__code__point.tex  classutf8_1_1invalid__utf16.eps  classutf8_1_1invalid__utf16.tex  classutf8_1_1invalid__utf8.eps  classutf8_1_1invalid__utf8.tex  (+48 more)
lfs/: g014b2b.tgz  phonetisaurus-0.8a.tgz  phonetisaurus-googlecode-archive.tgz
phonetisaurus/: __init__.py  __init__.py~
python/: setup.py
python/pybindgen/: container.py  converter_functions.py  cppattribute.py  cppclass.py  cppclass_container.py  cppexception.py  cppmethod.py  enum.py  function.py  gccxmlparser.py  pytypeobject.py  utils.py  version.py  wscript
python/script/: g2pserver.py  phoneticize.py  words.list
rnnlm/: __init__.py
script/: TwistedG2P.py  compute-best-mix.py  demo.html  g2p-client.py  g2pserver.py  g2pservice.tac  ngram-client.py  ngram-server.py  phoneticize.py  phonetisaurus-calculateER  phonetisaurus-calculateER-omega  phonetisaurus-config.json  phonetisaurus-rex.py  test-bindings.py  train-ngramlibrary.py
search/: all_1.js  all_10.js  all_11.js  all_15.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  files_1.js  files_4.js  files_6.js  functions_0.js  functions_11.js  functions_12.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  groups_0.js  namespaces_0.js  pages_0.js  typedefs_0.js  typedefs_1.js  (+15 more)
src/: ARPA2WFST.cc  ARPA2WFST.h  FstPathFinder.cc  LatticePruner.cc  LatticePruner.h  M2MFstAligner.cc  M2MFstAligner.h  Makefile  Raptor.cc  configure  phonetisaurus-align.cc  phonetisaurus-arpa2wfst-omega.cc  phonetisaurus-module.py  rnnlm-module.py  util.cc  util.h
src/.autoconf/: Makefile.in  aclocal.m4  configure.ac
src/.dustbin/: Arpa2Fst.cpp  Arpa2Fst.hpp  M2MFstAlignerB.cpp  M2MFstAlignerB.hpp  MBRDecoder.cpp  MBRDecoder.hpp  Phonetisaurus.cpp  Phonetisaurus.hpp  PhonetisaurusE2F.cpp  PhonetisaurusE2F.hpp  (+2 more)
test/: check-nbest-wer.py
tests/: Makefile  README.md  get-syms.cpp  grm-perp.py  phonetisaurus-e2f.cpp  phonetisaurus-perp.cpp
(+44 files in other folders)
